--- a/android/app/src/debug/AndroidManifest.xml
+++ b/android/app/src/debug/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="registersigninmodule.dexbytes.com.feed_list_module">
+    package="com.dexbytes.baseapp">
     <!-- Flutter needs it to communicate with the running application
-         to allow setting breakpoints, to provide hot reload, etc.
-    -->
+         to allow setting breakpoints, to provide hot reload, etc. -->
     <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
