--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,8 @@
 buildscript {
-    ext.kotlin_version = '1.3.50'
+    ext {
+        kotlin_version = '1.3.72'
+//        kotlin_version = '1.3.61'
+    }
     repositories {
         google()
         jcenter()
