--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: feed_list_module
-description: A new Flutter application.
+name: fullter_main_app
+description: A new Flutter project.
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -14,17 +14,26 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.6.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
-  pull_to_refresh: 1.5.5
+  cupertino_icons: ^1.0.0
+  provider: ^4.3.2+2   # To manage component state
+  shared_preferences: 0.5.12  # Store data in local memory
+  flutter_svg: ^0.19.0 #For svg image use
+  http: 0.12.2 # To Call API
+  timeago: ^2.0.22 # Time Ago
+  device_info: 0.4.0+2   # Get device info
+  get_version: ^0.2.0+1  # Get Application version
+  connectivity: 0.4.2  # Check Status of internet
+  fluttertoast: 3.1.3
 
 dev_dependencies:
   flutter_test:
@@ -41,25 +50,12 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-  assets:
-    #  - images/a_dot_burr.jpeg
-    #  - images/a_dot_ham.jpeg
-    - assets/images/tabbar_chat.png
-    - assets/images/tabbar_chat_active.png
-    - assets/images/tabbar_menu.png
-    - assets/images/tabbar_menu_active.png
-    - assets/images/tabbar_user.png
-    - assets/images/tabbar_user_active.png
-    - assets/images/tabbar_path.png
-    - assets/images/tabbar_path_active.png
-    - assets/images/add.png
-    - assets/images/add_border@3x.png
-    - assets/images/smile.png
-    - assets/images/sms.png
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
+  assets:
+   - assets/
+   - assets/images/
+   - assets/lang/
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
